--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="./style.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="/dist/output.css">
     <title>Todo React Typescript App</title>
   </head>
   <body class="bg-mblue">
